--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "gmail-filter",
+  "repository": " ",
   "version": "1.0.0",
   "description": "Inbox managing and basic stats report",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "author": "alinasul",
   "license": "ISC",
   "dependencies": {
-    "googleapis": "^39.2.0"
+    "app": "^0.1.0",
+    "create-react-app": "^3.4.1",
+    "googleapis": "^39.2.0",
+    "minimist": "^1.2.3"
+  },
+  "resolutions": {
+    "minimist": "^1.2.3"
   }
 }
