--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-query": "^1.5.5",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-table": "^7.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
