--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-query": "^1.5.5",
     "react-scripts": "3.4.1",
-    "react-table": "^7.2.0"
+    "react-table": "^7.2.0",
+    "sass": "^1.26.8"
   },
   "scripts": {
     "start": "react-scripts start",
