--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-query": "^1.5.5",
     "react-scripts": "3.4.1",
     "react-table": "^7.2.0",
-    "sass": "^1.26.8"
+    "sass": "^1.26.8",
+    "victory": "^35.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
