--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prop-types": "^15.7.2"
   },
   "resolutions": {
-    "minimist": "^1.2.3"
+    "minimist": "^1.2.3",
+    "lodash":"^4.17.19"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
