--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "formik": "^2.1.7",
+    "formik-material-ui": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-query": "^1.5.5",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-table": "^7.2.0",
     "sass": "^1.26.8",
     "victory": "^35.0.3"
