--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "gmail-filter",
   "repository": " ",
   "version": "1.0.0",
-  "description": "Inbox managing and basic stats report",
+  "description": "Inbox basic stats report by sender",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1 && react-scripts test",
+    "start": "nodemon index.js & react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "res": "npx npm-force-resolutions && npm install"
   },
   "author": "alinasul",
   "license": "ISC",
@@ -17,14 +20,46 @@
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
     "minimist": "^1.2.3",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "formik": "^2.1.7",
+    "formik-material-ui": "^3.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-query": "^1.5.5",
+    "react-scripts": "^3.4.3",
+    "react-table": "^7.2.0",
+    "sass": "^1.26.8",
+    "victory": "^35.0.3"
   },
   "resolutions": {
     "minimist": "^1.2.3",
     "lodash": "^4.17.19",
-    "node-forge": "^0.10.0"
+    "node-forge": "^0.10.0",
+    "yargs-parser": "^13.1.2",
+    "elliptic": "^6.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
