--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1 && react-scripts test",
     "start": "nodemon index.js & react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build & webpack --config webpack.config.server.js",
+    "build:server": "esbuild src/server.js --bundle --outfile=build/server.js --platform=node",
+    "build:client": "react-scripts build",
     "eject": "react-scripts eject",
     "res": "npx npm-force-resolutions && npm install"
   },
@@ -45,7 +47,10 @@
     "elliptic": "^6.5.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "esbuild": "^0.8.6",
+    "nodemon": "^2.0.4",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^4.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -61,5 +66,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
